syntax = "proto3";

package uk.co.instanto.client.service.proto;

option java_package = "uk.co.instanto.client.service.proto";

message RpcPacket {
    enum Type {
        REQUEST = 0;
        RESPONSE = 1;
        STREAM_DATA = 2;
        STREAM_ERROR = 3;
        STREAM_COMPLETE = 4;
        STREAM_CANCEL = 5;
        EVENT = 6;
    }
    Type type = 1;
    string serviceId = 2;
    string methodName = 3;
    string requestId = 4;
    string replyTo = 5;
    bytes payload = 6;
    string contentType = 7;
}
